--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cohort",
+  "name": "Cohort",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "zod": "^3.22.4"
   }
 }
